--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
     networks:
       - nginx-net
       - default
-    command: datasette -p 8001 -h 0.0.0.0 --setting base_url /datasette/ /app/database/database.db
+    command: datasette -p 8001 -h 0.0.0.0 --setting base_url --setting max_returned_rows 50000 /datasette/ /app/database/database.db
 
 networks:
   nginx-net:
