--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,11 +44,14 @@ services:
     ports:
       - "5235:8001"
     image: datasetteproject/datasette
+    depends_on:
+      - "gnps-datasetcache-web"
     volumes:
       - ./database/:/app/database:ro
     networks:
       - nginx-net
       - default
+    restart: on-failure
     command: datasette -p 8001 -h 0.0.0.0 --setting base_url /datasette/ --setting max_returned_rows 50000 /app/database/database.db
 
 networks:
