--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,7 +52,7 @@ services:
       - nginx-net
       - default
     restart: on-failure
-    command: datasette -p 8001 -h 0.0.0.0 --setting base_url /datasette/ --setting max_returned_rows 50000 --setting sql_time_limit_ms 10000 /app/database/database.db
+    command: datasette -p 8001 -h 0.0.0.0 --setting base_url /datasette/ --setting max_returned_rows 50000 --setting sql_time_limit_ms 10000 --setting max_csv_mb 0 /app/database/database.db
 
 networks:
   nginx-net:
