--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,8 +47,8 @@ services:
 
   gnps-datasetcache-datasette:
     ports:
-      - "5235:8001"
-    image: datasetteproject/datasette
+      - "5235:5234" # This port selection of the internal port matching the external port of the web server is to get around a datasette bug
+    image: datasetteproject/datasette:0.58.1
     depends_on:
       - "gnps-datasetcache-web"
     volumes:
@@ -57,7 +57,7 @@ services:
       - nginx-net
       - default
     restart: on-failure
-    command: datasette -p 8001 -h 0.0.0.0 --setting base_url /datasette/ --setting max_returned_rows 50000 --setting sql_time_limit_ms 10000 --setting max_csv_mb 0 /app/database/database.db
+    command: datasette -p 5234 -h 0.0.0.0 --setting base_url /datasette/ --setting max_returned_rows 50000 --setting sql_time_limit_ms 10000 --setting max_csv_mb 0 /app/database/database.db
 
 networks:
   nginx-net:
