updating path to dataset cache

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,10 +14,13 @@ services:
       - nginx-net
     command: /app/run_server.sh
     environment:
-      VIRTUAL_HOST: gnps-datasetcache.ucsd.edu
-      VIRTUAL_PORT: 5234
-      LETSENCRYPT_HOST: gnps-datasetcache.ucsd.edu
-      LETSENCRYPT_EMAIL: miw023@ucsd.edu
+      #VIRTUAL_HOST: gnps-datasetcache.ucsd.edu
+      VIRTUAL_HOST: datasetcache.gnps2.org
+      VIRTUAL_PORT: 5000
+      #LETSENCRYPT_HOST: gnps-datasetcache.ucsd.edu
+      LETSENCRYPT_HOST: datasetcache.gnps2.org
+      #LETSENCRYPT_EMAIL: miw023@ucsd.edu
+      LETSENCRYPT_EMAIL: mwang87@gmail.com
     
 
   gnps-datasetcache-beat:
