--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     networks:
       - default
       - nginx-net
+    restart: on-failure
     command: /app/run_server.sh
     environment:
       VIRTUAL_HOST: gnps-datasetcache.ucsd.edu
@@ -22,7 +23,6 @@ services:
       #LETSENCRYPT_EMAIL: miw023@ucsd.edu
       LETSENCRYPT_EMAIL: mwang87@gmail.com
     
-
   gnps-datasetcache-beat:
     build: .
     volumes:
@@ -31,6 +31,7 @@ services:
     networks:
       - default
       - nginx-net
+    restart: on-failure
     command: /app/run_worker_beat.sh
 
   gnps-datasetcache-worker:
@@ -41,10 +42,12 @@ services:
     networks:
       - default
       - nginx-net
+    restart: on-failure
     command: /app/run_worker_compute.sh
     
   gnps-datasetcache-redis:
     image: redis
+    restart: on-failure
     networks:
       - default
 
