adding in nextflow

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
     volumes:
       - ./database/:/app/database
       - ./temp/:/app/temp
+      - ./workflows/:/app/workflows
     networks:
       - default
       - nginx-net
@@ -37,6 +38,7 @@ services:
     volumes:
       - ./database/:/app/database
       - ./temp/:/app/temp
+      - ./workflows/:/app/workflows
     networks:
       - default
       - nginx-net
