--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,7 @@ services:
       - ./database/:/app/database
       - ./temp/:/app/temp
       - ./workflows/:/app/workflows
+      - .env:/app/.env
     networks:
       - default
       - nginx-net
