--- a/Dockerfile.conversion
+++ b/Dockerfile.conversion
@@ -5,13 +5,10 @@ ARG PATH="/root/miniconda3/bin:${PATH}"
 RUN apt-get update -y
 RUN apt-get install -y build-essential zip unzip wget
 
-RUN wget \
-    https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh \
-    && mkdir /root/.conda \
-    && bash Miniconda3-latest-Linux-x86_64.sh -b \
-    && rm -f Miniconda3-latest-Linux-x86_64.sh 
-RUN conda --version
-RUN python --version
+# Install Mamba
+ENV CONDA_DIR /opt/conda
+RUN wget https://github.com/conda-forge/miniforge/releases/latest/download/Miniforge3-Linux-x86_64.sh -O ~/miniforge.sh && /bin/bash ~/miniforge.sh -b -p /opt/conda
+ENV PATH=$CONDA_DIR/bin:$PATH
 
 COPY requirements.txt .
 RUN pip install -r requirements.txt
