--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,7 +54,10 @@ services:
       - default
 
   gnps-datasetcache-conversion:
-    build: .
+    # update build to use different docker file
+    build:
+      context: .
+      dockerfile: Dockerfile.conversion
     volumes:
       - ./database/:/app/database
       - ./temp/:/app/temp
