--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "workflows/PublicDataset_ReDU_Metadata_Workflow"]
 	path = workflows/PublicDataset_ReDU_Metadata_Workflow
 	url = https://github.com/Wang-Bioinformatics-Lab/PublicDataset_ReDU_Metadata_Workflow.git
+[submodule "workflows/GNPSDataPackage"]
+	path = workflows/GNPSDataPackage
+	url = https://github.com/Wang-Bioinformatics-Lab/GNPSDataPackage.git
