--- a/workflows/Makefile
+++ b/workflows/Makefile
@@ -1,2 +1,3 @@
 run_all:
-	nextflow run create_file_lists_workflow.nf --mtblstoken XXX
+	nextflow run create_file_lists_workflow.nf --mtblstoken addeda9b-affa-4736-822e-5a5e0d7601a0 -resume
+
