--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -97,6 +97,21 @@ services:
     restart: on-failure
     command: /app/run_datasette.sh
 
+  gnps-datasetcache-datasette2:
+    ports:
+      - "5236:5234" # This port selection of the internal port matching the external port of the web server is to get around a datasette bug
+    image: datasetteproject/datasette:0.64.6
+    depends_on:
+      - "gnps-datasetcache-web"
+    volumes:
+      - ./database/:/app/database:ro
+      - ./run_datasette.sh:/app/run_datasette.sh
+    networks:
+      - nginx-net
+      - default
+    restart: on-failure
+    command: /app/run_datasette.sh
+
 networks:
   nginx-net:
     external:
