--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,6 +96,11 @@ services:
       - default
     restart: on-failure
     command: /app/run_datasette.sh
+    environment:
+      VIRTUAL_HOST: datasetcachedatasette.gnps2.org
+      VIRTUAL_PORT: 5234
+      LETSENCRYPT_HOST: datasetcachedatasette.gnps2.org
+      LETSENCRYPT_EMAIL: mwang87@gmail.com
 
   gnps-datasetcache-datasette2:
     ports:
